--- a/app/scss/components/_hero.scss
+++ b/app/scss/components/_hero.scss
@@ -13,5 +13,6 @@
   video {
     height: auto;
     width: 100%;
+    border-bottom: 1px solid #ddd;
   }
 }
