--- a/app/scss/helpers/_variables.scss
+++ b/app/scss/helpers/_variables.scss
@@ -15,6 +15,7 @@ $base-line-height: $base-font-size * 1.45;
 $spacing-xs: $base-line-height * .25;
 $spacing-sm: $base-line-height * .75;
 $spacing: $base-line-height;
+$spacing-md: $base-line-height * 1.5;
 $spacing-lg: $base-line-height * 2;
 
 $type-scale: (
