--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -27,7 +27,7 @@ body {
   }
 
   section {
-    padding: $spacing-lg $spacing;
+    padding: $spacing;
   }
 
   a {
